--- a/index.html
+++ b/index.html
@@ -5,49 +5,37 @@
     <title>Weather App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
     <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css'>
     <link rel="stylesheet" href="css/style.css">
-
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+    
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js'></script>
+    <script src='http://www.geoplugin.net/javascript.gp'></script>
+    <script src='http://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js'></script>
+    <script src='http://code.jquery.com/jquery-1.7.1.min.js'></script>
+    <script src='http://www.quasimondo.com/StackBlurForCanvas/StackBlur.js'></script>
+    
+    <script src="js/index.js"></script>
   </head>
 
   <body>
 
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+    <div id="bg"></div>
+    <div id="bg2"></div>
+    <h3 id="location"></h3>
+    <div class="container">
+      <h1 id="temp"> </h1>
+      <div id="weather"></div>
+      <div id="icon"></div>
+      <div id="units" class="btn btn-primary"></div>
 
-<body>
-
-  <div id="bg"></div>
-  <div id="bg2"></div>
-  <h3 id="location"></h3>
-
-  <div class="container">
-    <h1 id="temp"> </h1>
-    <div id="weather"></div>
-    <div id="icon"></div>
-    <div id="units" class="btn btn-primary">
+      <div id="footer">
+       <p>Rosa Mohammadi <br> March 2016 </p>
+        <a href="http://www.geoplugin.com/" target="_new" title="geoPlugin for IP geolocation">Geolocation by geoPlugin</a>
+      </div>
     </div>
-<div id="footer">
-   <p>Rosa Mohammadi <br> March 2016 </p>
-    <a href="http://www.geoplugin.com/" target="_new" title="geoPlugin for IP geolocation">Geolocation by geoPlugin</a>
-
-  </div>
-
-  </div>
-
-</body>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js'></script>
-<script src='http://www.geoplugin.net/javascript.gp'></script>
-<script src='http://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js'></script>
-<script src='http://code.jquery.com/jquery-1.7.1.min.js'></script>
-<script src='http://www.quasimondo.com/StackBlurForCanvas/StackBlur.js'></script>
-
-        <script src="js/index.js"></script>
-
-
-
-
   </body>
+  
 </html>
